src/objects/Plateforme__c.object
<CustomObject>
    <description>Un point logistique du maillage transporteur dont dépend un ensemble de relais. C&apos;est une notion de découpage d&apos;un territoire par un transporteur.</description>
    <fields>
        <fullName>Coordinateur_logistique__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coordinateur logistique</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Depots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferenceExterne__c</fullName>
        <externalId>true</externalId>
        <label>Réference Externe</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transporteur__c</fullName>
        <label>Transporteur</label>
        <referenceTo>Transporteur__c</referenceTo>
        <relationshipName>Plateformes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Dépôt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Transporteur__c</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Coordinateur_logistique__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DEPOTS_CHRONO</fullName>
        <columns>NAME</columns>
        <columns>Transporteur__c</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Coordinateur_logistique__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transporteur__c</field>
            <operation>equals</operation>
            <value>CHRONOPOST</value>
        </filters>
        <label>CHRONO</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
            <roleAndSubordinates>PUS_France</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEPOTS_COLIPOSTE</fullName>
        <columns>NAME</columns>
        <columns>Transporteur__c</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Coordinateur_logistique__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transporteur__c</field>
            <operation>equals</operation>
            <value>COLIPOSTE</value>
        </filters>
        <label>COLIPOSTE</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
            <roleAndSubordinates>PUS_France</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEPOTS_DPD_BEL</fullName>
        <columns>NAME</columns>
        <columns>Transporteur__c</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Coordinateur_logistique__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transporteur__c</field>
            <operation>equals</operation>
            <value>DPD_BEL</value>
        </filters>
        <label>DPD_BEL</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
            <roleAndSubordinates>DPD_BNL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEPOTS_DPD_CHE</fullName>
        <columns>NAME</columns>
        <columns>Transporteur__c</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Coordinateur_logistique__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transporteur__c</field>
            <operation>equals</operation>
            <value>DPD_CHE</value>
        </filters>
        <label>DPD_CHE</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEPOTS_DPD_CZE</fullName>
        <columns>NAME</columns>
        <columns>Transporteur__c</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Coordinateur_logistique__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transporteur__c</field>
            <operation>equals</operation>
            <value>DPD_CZE</value>
        </filters>
        <label>DPD_CZE</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEPOTS_DPD_HUN</fullName>
        <columns>NAME</columns>
        <columns>Transporteur__c</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Coordinateur_logistique__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transporteur__c</field>
            <operation>equals</operation>
            <value>DPD_HUN</value>
        </filters>
        <label>DPD_HUN</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEPOTS_DPD_LUX</fullName>
        <columns>NAME</columns>
        <columns>Transporteur__c</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Coordinateur_logistique__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transporteur__c</field>
            <operation>equals</operation>
            <value>DPD_LUX</value>
        </filters>
        <label>DPD_LUX</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
            <roleAndSubordinates>DPD_BNL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEPOTS_DPD_NLD</fullName>
        <columns>NAME</columns>
        <columns>Transporteur__c</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Coordinateur_logistique__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transporteur__c</field>
            <operation>equals</operation>
            <value>DPD_NLD</value>
        </filters>
        <label>DPD_NLD</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
            <roleAndSubordinates>DPD_BNL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEPOTS_EXAPAQ</fullName>
        <columns>NAME</columns>
        <columns>Transporteur__c</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Coordinateur_logistique__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transporteur__c</field>
            <operation>equals</operation>
            <value>EXAPAQ</value>
        </filters>
        <label>EXAPAQ</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
            <roleAndSubordinates>PUS_France</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEPOTS_LA_POSTE</fullName>
        <columns>NAME</columns>
        <columns>Transporteur__c</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Coordinateur_logistique__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transporteur__c</field>
            <operation>equals</operation>
            <value>LA_POSTE</value>
        </filters>
        <label>LA_POSTE</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
            <roleAndSubordinates>PUS_France</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEPOTS_VIR_TRANSPORT</fullName>
        <columns>NAME</columns>
        <columns>Transporteur__c</columns>
        <columns>ReferenceExterne__c</columns>
        <columns>Coordinateur_logistique__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transporteur__c</field>
            <operation>equals</operation>
            <value>VIR_TRANSPORT</value>
        </filters>
        <label>VIR_TRANSPORT</label>
        <language>fr</language>
        <sharedTo>
            <group>SUPPORT_DOSI</group>
            <roleAndSubordinates>PUS_France</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Nom du dépôt</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dépôts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>